NIFI-14890 Updated the Maven PMD Maven plugin used by the nifi-api to use the same ruleset as Apache NIFI.